--- a/css/obras-sociales.css
+++ b/css/obras-sociales.css
@@ -4,13 +4,17 @@
     padding: 0;
 }
 
-body {
+body.body2 {
+    background-image: url('../imagenes/obras-sociales.png'); /* Ruta de la imagen de fondo */
+    background-size: cover; /* Asegura que la imagen cubra todo el fondo */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-position: center center; /* Centra la imagen */
+    background-attachment: fixed; /* Fija la imagen para que no se mueva al hacer scroll */
+    height: 100vh; /* Asegura que el body tenga altura suficiente */
+    margin: 0; /* Elimina el margen predeterminado del body */
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1rem;
-    line-height: 1.6;
-    background-color: #f4f4f4; 
-    color: #333;
-    padding-top: 5rem;
+
 }
 
 /* Estilos generales del header */
@@ -115,19 +119,14 @@ header.navbar {
   }
 }
 
+/* Estilos del footer */
 
-
-
-
-
-
-/* --- Footer general --- */
 .footer {
     background-color: #3a7015; 
     color: #fff;
     font-family: 'Segoe UI', sans-serif;
-    /*margin-top: 3rem;*/
-    margin-top: 0;
+    margin-top: 40rem;
+    margin-inline-end: 0;
   }
   
   /* Contenido principal */
@@ -187,3 +186,13 @@ header.navbar {
     color: white;        
   }
 
+  .grid {
+    margin-top: 20rem;
+    margin-left: 10rem;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 10px;
+    justify-items: center;
+    max-width: 1000px;
+    
+  }
