--- a/css/inicio.css
+++ b/css/inicio.css
@@ -2,7 +2,7 @@
 .video-banner {
     position: relative;
     width: 100%;
-    height: auto;
+    height: 90vh;
     overflow: hidden;
     margin-top: 0 !important;
     padding-top: 0;
@@ -42,6 +42,7 @@
   padding: 50px 10px;
   background-color:rgb(191 219 127); 
   font-family: 'Segoe UI', sans-serif;
+  margin:0;
 }
 
 /* Slogan decorativo a la izquierda */
